<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dimen_20dp"
    tools:context=".ui.main.fragments.ShowFragment">

    <TextView
        android:id="@+id/textView"
        style="@style/StyleTittleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sale_product"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout1"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.StyleInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/holder_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtHolderName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.StyleInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:hint="@string/amount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtAmount"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currency"
        android:textStyle="bold"
        android:textSize="@dimen/dimen_18sp"
        android:layout_marginStart="@dimen/dimen_18sp"
        app:layout_constraintBottom_toBottomOf="@+id/radioGroup"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout"
        app:layout_constraintTop_toTopOf="@+id/radioGroup" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@id/radioVND"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dimen_20dp"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        android:layout_marginStart="@dimen/dimen_30sp">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/radioVND"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vn" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:layout_marginStart="30sp"
            android:id="@+id/radioUSD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/usd" />
    </RadioGroup>

    <Button
        android:id="@+id/btnSale"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_108dp"
        android:elevation="@dimen/dimen_10dp"
        android:text="@string/sale"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
</androidx.constraintlayout.widget.ConstraintLayout>