<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="com.example.day7.data.model.Transaction"/>
        <variable
            name="transaction"
            type="Transaction" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        app:cardCornerRadius="@dimen/dimen_20dp"
        android:elevation="@dimen/dimen_10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/teal_200"
            android:padding="@dimen/dimen_20dp">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/type"
                app:layout_constraintEnd_toStartOf="@+id/txtType"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtHolderName" />

            <TextView
                android:id="@+id/txtType"
                android:text="@{transaction.type.name()}"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/textView5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView5"
                app:layout_constraintTop_toTopOf="@+id/textView5" />

            <TextView
                android:id="@+id/txtAmount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@{@string/amount_format( String.valueOf(transaction.amount), transaction.currency)}"
                app:layout_constraintBottom_toBottomOf="@+id/textView9"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView5"
                app:layout_constraintTop_toTopOf="@+id/textView9" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_20dp"
                android:text="@string/amount"
                app:layout_constraintEnd_toStartOf="@+id/txtType"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_20dp"
                android:text="@string/time"
                app:layout_constraintEnd_toStartOf="@+id/txtType"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

            <TextView
                android:id="@+id/txtHolderName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{transaction.holderName}"
                android:background="@drawable/bg_bottom_dash_line"
                android:textSize="@dimen/dimen_25sp"
                android:paddingBottom="@dimen/dimen_2dp"
                android:textStyle="bold"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@{transaction.getDateTime()}"
                app:layout_constraintBottom_toBottomOf="@+id/textView8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView5"
                app:layout_constraintTop_toTopOf="@+id/textView8" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>